# CrewAi_

demo_1/: README.md  blog_output.txt  pyproject.toml
demo_1/src/demo_1/: crew.py  main.py
demo_1/src/demo_1/config/: agents.yaml  tasks.yaml
