[project]
name = "demo_1"
version = "0.1.0"
description = "demo_1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.10.1",
]

[project.scripts]
demo_1 = "demo_1.main:run"
run_crew = "demo_1.main:run"
train = "demo_1.main:train"
replay = "demo_1.main:replay"
test = "demo_1.main:test"
run_with_trigger = "demo_1.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
